# wiggle-settings

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/service/: wiggle-settings-boot.sh  wiggle-settings.service
src/wiggle_settings/: default.json  install.py  main.py
